Enhance form validation with success alert
Added alert for successful form submission.

--- a/EXP3/DHTML_form.html
+++ b/EXP3/DHTML_form.html
@@ -58,7 +58,9 @@
       }else{
         document.getElementById("emailError").style.display = "none";
       }
-
+      if(ok){
+      alert("Form submitted successfully!");
+    }
       return ok;
     }
   </script>
@@ -82,3 +84,4 @@
 
 </body>
 </html>
+
